[package]
name = "mre"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.15.0", features = ["compio", "compress", "coo-kie", "cookie", "default", "rustls", "tls-rustls", "url", "url-pkg", "webpki-roots", "ws"] }
rust_decimal = { version = "1.37.2", features = ["macros", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
futures = "0.3.31"
once_cell = "1.21.3"
ratelimit = { version = "0.10.0", path = "dependencies/ratelimit" }
macros = { version = "~2.5.0", path = "dependencies/macros" }
rustls = { version = "0.23.29", default-features = false, features = ["std", "aws_lc_rs"] }
webpki-roots = "1.0.1"
url = "2.5.4"
thiserror = "2.0.12"
downcast-rs = "2.0.1"
arc-swap = "1.7.1"
async-channel = "2.5.0"
socket2 = "0.5.10"
num_cpus = "1.17.0"
compio = { version = "0.15.0", features = ["all"] }