[package]
name = "mre"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.15.0", features = ["compio", "default", "ws"] }
futures = "0.3.31"
compio = { version = "0.15.0", features = ["all", "enable_log"] }
tokio = { version = "1.47.0", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }

[profile.dev]
opt-level = 1
